# yumclone

./: .gitignore  Cargo.toml
src/: config.rs  error.rs  main.rs  package.rs  primary.rs  repo.rs  urlmux.rs
src/test-data/local/repodata/: 3abfbe409fd9f64a309027cb54047a0d82b4963f42c4280f77006b2e86e45681-other.sqlite.bz2  5c9bb4422e7415ada973627989698825f9835646d2cafeba2aa34e8f3fd010f0-updateinfo.xml.xz  a567519c08f65a1fce17036b58923f652fe2a23eccd453a7aeb557e1eedd1ccd-updateinfo.xml.xz  repomd.xml
src/test-data/remote/repodata/: a075404e3a20128979eb63827a791eace053fc290cfa467296ca1131945f870d-comps-Everything.x86_64.xml  a71e5452c7ecaaee928f11080ad3c56f26ce716add742c36b6c37abc634a6f73-other.sqlite.bz2  f972efaf047d7612318f1a8d490aff50b34fa81ba6447291b2148b7336bfccd0-updateinfo.xml.xz  repomd.xml
