[package]
name = "yumclone"
version = "0.3.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
description = "A tool to clone and synchronise yum repositories."
edition = "2018"

[dependencies]
env_logger = "0.5.6"
error-chain = "0.11.0"
flate2 = "1.0"
loadconf = "0.2.0"
log = "0.4.1"
regex = "0.2.6"
reqwest = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.2.1"
tempdir = "0.3.7"
tree_magic = "0.2"
url = "1.7"
url_serde = "0.2.0"
walkdir = "2.1.4"
failure = "0.1.5"
structopt = "0.2.16"
openssl = "0.10.23"
hex = "0.3.2"
rayon = "1.1.0"
