[package]
name = "yumclone"
version = "0.3.0"
authors = ["Curtis Millar <curtis@curtism.me>"]
description = "A tool to clone and synchronise yum repositories."
edition = "2018"

[dependencies]
env_logger = "0.5.6"
error-chain = "0.11.0"
failure = "0.1.5"
flate2 = "1.0"
hex = "0.3.2"
loadconf = "0.2.0"
log = "0.4.1"
openssl = "0.10.23"
regex = "0.2.6"
serde = { version = "1.0", features = [ "derive" ] }
serde-xml-rs = "0.3"
structopt = "0.2.16"
tempdir = "0.3.7"
tokio = { version = "0.2", features = ["full"] }
tree_magic = "0.2"
walkdir = "2.1.4"

[dependencies.reqwest]
version = "0.10"
features = [ "rustls-tls", "gzip", "stream" ]
